fix(auth, navBar, styles): fix minor bug and hide scrollbars

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -66,7 +66,7 @@
       box-shadow: $shadow;
 
       &::-webkit-scrollbar {
-        width: 0px;
+        display: none;
       }
 
       &::before,
